@@ -1,17 +1,17 @@
 Kissa ja koira ovat karvaisia.
 Mies on joten kuten selvillä siitä, että hänen on joten kuten palattava kotiinsa.
- [code=1, level=0, descr="", stpos=8, len=11, suggs={}]
- [code=1, level=0, descr="", stpos=50, len=11, suggs={}]
+ [code=1, level=0, descr="", stpos=8, len=11, suggs={"jotenkuten"}]
+ [code=1, level=0, descr="", stpos=50, len=11, suggs={"jotenkuten"}]
 Se oli joten  kuten.
- [code=1, level=0, descr="", stpos=7, len=12, suggs={}]
+ [code=1, level=0, descr="", stpos=7, len=12, suggs={"jotenkuten"}]
  [code=2, level=0, descr="", stpos=12, len=2, suggs={}]
 Välivirhe  ennen kuin joten kuten tulee toinen virhe.
  [code=2, level=0, descr="", stpos=9, len=2, suggs={}]
- [code=1, level=0, descr="", stpos=22, len=11, suggs={}]
+ [code=1, level=0, descr="", stpos=22, len=11, suggs={"jotenkuten"}]
 Nyt on joten kuten  tehtävä joten kuten hankalampi  virheyhdistelmä.
- [code=1, level=0, descr="", stpos=7, len=11, suggs={}]
+ [code=1, level=0, descr="", stpos=7, len=11, suggs={"jotenkuten"}]
  [code=2, level=0, descr="", stpos=18, len=2, suggs={}]
- [code=1, level=0, descr="", stpos=28, len=11, suggs={}]
+ [code=1, level=0, descr="", stpos=28, len=11, suggs={"jotenkuten"}]
  [code=2, level=0, descr="", stpos=50, len=2, suggs={}]
 Lause , jossa on pilkun edellä turha väli.
  [code=3, level=0, descr="", stpos=5, len=2, suggs={}]
