@@ -1,3 +1,7 @@
+2008-07-27 Harri Pitkänen <hatapitk@iki.fi>
+
+	* Add support for suggestions from grammar checker.
+
 2008-07-26 Harri Pitkänen <hatapitk@iki.fi>
 
 	* Add character case checks to grammar checker.
